--- a/style.css
+++ b/style.css
@@ -7,14 +7,14 @@ body {
     /* min-width: fit-content; */
     width: 100vw;
     min-height: 100vh;
-    height: 100vh;
+    height: 70vh;
 }
 
 .box {
     background-color: black;
     color:white;
-    width: 25%;
-    height: 100%; 
+    width: 20%;
+    height: 500px; 
     font-size:20px ;
     font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
     font-weight: lighter;
@@ -47,8 +47,8 @@ img {
     font-family:  Arial, "Helvetica Neue", Helvetica, sans-serif;
     background-color: lightgrey;
     color: black;
-    width: 35%;
-    height: 100%;
+    width: 20%;
+    height: 500px;
     font-size: 12px;    
     line-height: 20px;
     text-indent: 2px;
@@ -84,7 +84,7 @@ input {
 .endbox {
     background-color: whitesmoke;
     width: 40%;
-    height: 100%;
+    height: 500px;
 
     margin: -1 auto;
     font-size: 13px;
@@ -99,10 +99,12 @@ input {
 textarea {
     width: 85%;
     height: 17vh;
+    resize: none;
 
     margin: auto;
     padding: 10px;
     border: 1px solid lightgrey;
+    border-radius: 7px;
 
 }
 
@@ -132,9 +134,9 @@ pre {
 @media screen  and (max-width: 600px){
     .container {
         flex-direction: column;
-        /* flex: text; */
         text-wrap: wrap;
         max-width: 100vw;
+        overflow-x: hidden;
     }
     .box, .box2, .endbox {
         width: 100%;
