--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .box {
     background-color: black;
     color:white;
-    width: 20%;
+    width: 310px;
     height: 500px; 
     font-size:20px ;
     font-family: Calibri, Candara, Segoe, "Segoe UI", Optima, Arial, sans-serif;
@@ -47,7 +47,7 @@ img {
     font-family:  Arial, "Helvetica Neue", Helvetica, sans-serif;
     background-color: lightgrey;
     color: black;
-    width: 20%;
+    width: 320px;
     height: 500px;
     font-size: 12px;    
     line-height: 20px;
